# gameboycore-retro

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
config/: gameboycore_libretro.info  gameboycore_libretro.info.in
src/: libretro.cpp
